--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="images/logo.png" alt="Zambia Business Insights Logo">
+                <img src="images/logo.png" alt="Zambia Business Insights Logo" loading="lazy">
             </div>
             <nav>
                 <ul>
@@ -97,19 +97,19 @@
             </div>
             <div class="sector-container">
                 <div class="sector">
-                    <img src="images/mining-icon.png" alt="Mining Icon" class="sector-icon">
+                    <img src="images/mining-icon.png" alt="Mining Icon" class="sector-icon" loading="lazy">
                     <h3>Mining</h3>
                     <p>Zambia is Africa's second-largest copper producer, with vast deposits of copper, cobalt, emeralds, and other minerals.</p>
                     <a href="sector-mining.html" class="learn-more">Learn More</a>
                 </div>
                 <div class="sector">
-                    <img src="images/agriculture-icon.png" alt="Agriculture Icon" class="sector-icon">
+                    <img src="images/agriculture-icon.png" alt="Agriculture Icon" class="sector-icon" loading="lazy">
                     <h3>Agriculture</h3>
                     <p>With abundant arable land and diverse climate zones, Zambia's agricultural sector presents immense potential.</p>
                     <a href="sector-agriculture.html" class="learn-more">Learn More</a>
                 </div>
                 <div class="sector">
-                    <img src="images/energy-icon.png" alt="Energy Icon" class="sector-icon">
+                    <img src="images/energy-icon.png" alt="Energy Icon" class="sector-icon" loading="lazy">
                     <h3>Energy</h3>
                     <p>Zambia's energy sector is ripe for investment, with a focus on renewable sources to meet growing demand.</p>
                     <a href="sector-energy.html" class="learn-more">Learn More</a>
