--- a/investment-guide.html
+++ b/investment-guide.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investment Guide - Zambia Business Insights</title>
+    <title>Zambia Business Insights</title>
+    <meta name="description" content="Zambia Business Insights provides comprehensive economic data and investment opportunities in Zambia.">
+    <meta name="keywords" content="Zambia, Business, Economic Data, Investment, Opportunities">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit-code.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
