--- a/index.html
+++ b/index.html
@@ -145,5 +145,7 @@
             <p>Last updated: <span id="last-updated"></span></p>
         </div>
     </footer>
+    <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+    <zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cm3s5tjmf000sfo0cpbkzeumz'></zapier-interfaces-chatbot-embed>
 </body>
 </html>
