--- a/featured-sectors.html
+++ b/featured-sectors.html
@@ -106,5 +106,7 @@
             <p>&copy; 2023 Zambia Business Insights. All rights reserved.</p>
         </div>
     </footer>
+    <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+    <zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cm3s5tjmf000sfo0cpbkzeumz'></zapier-interfaces-chatbot-embed>    
 </body>
 </html>
