--- a/investment-guide.html
+++ b/investment-guide.html
@@ -84,7 +84,18 @@
                     <li><a href="https://www.zra.org.zm/" target="_blank">Zambia Revenue Authority</a></li>
                     <li><a href="detailed-economic-overview.html">Detailed Economic Overview</a></li>
                 </ul>
-            </section>
+                <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+                <zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cm3s5tjmf000sfo0cpbkzeumz' height='600px' width='400px'></zapier-interfaces-chatbot-embed>
+                <h3>Need More Help?</h3>
+                <p>If you have any additional questions or need assistance, chat with us directly below:</p>
+                <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+                <zapier-interfaces-chatbot-embed 
+                    is-popup='false' 
+                    chatbot-id='cm3s5tjmf000sfo0cpbkzeumz' 
+                    height='600px' 
+                    width='400px'>
+                </zapier-interfaces-chatbot-embed>
+            </section>            
             <section id="investor-testimonial">
                 <h2>Investor Testimonial</h2>
                 <blockquote>
