--- a/investment-guide.html
+++ b/investment-guide.html
@@ -88,11 +88,13 @@
                 <p>If you have any additional questions or need assistance, chat with us directly below:</p>
                 <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
                 <zapier-interfaces-chatbot-embed 
-                    is-popup='false' 
-                    chatbot-id='cm3s5tjmf000sfo0cpbkzeumz' 
-                    height='600px' 
-                    width='400px'>
-                </zapier-interfaces-chatbot-embed>
+                    is-popup="false" 
+                    chatbot-id="cm3s5tjmf000sfo0cpbkzeumz" 
+                    height="800px" 
+                    width="100%" 
+                    style="display: block; max-width: 100%; height: auto; margin: 0 auto;">
+            </zapier-interfaces-chatbot-embed>
+            
             </section>            
             <section id="investor-testimonial">
                 <h2>Investor Testimonial</h2>
