--- a/sector-mining.html
+++ b/sector-mining.html
@@ -69,12 +69,12 @@
                     <li>Track your license portfolio with an interactive map</li>
                 </ul>
                 <iframe 
-                    src="https://portal.miningcadastre.gov.zm" 
+                    src="https://portals.landfolio.com/zambia/" 
                     width="100%" 
                     height="500" 
                     style="border: none;">
                 </iframe>
-                <p>Visit the portal at <a href="https://portal.miningcadastre.gov.zm" target="_blank">https://portal.miningcadastre.gov.zm</a>.</p>
+                <p>Visit the portal at <a href="https://portals.landfolio.com/zambia/" target="_blank">https://portal.miningcadastre.gov.zm</a>.</p>
             </section>
             
             <!-- Policies Section -->
