--- a/sector-mining.html
+++ b/sector-mining.html
@@ -74,7 +74,7 @@
                     height="500" 
                     style="border: none;">
                 </iframe>
-                <p>Visit the portal at <a href="https://portals.landfolio.com/zambia/" target="_blank">https://portal.miningcadastre.gov.zm</a>.</p>
+                <p>Visit the portal at <a href="https://shorturl.at/RwtVo" target="_blank">https://portal.miningcadastre.gov.zm</a>.</p>
             </section>
             
             <!-- Policies Section -->
