--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <div class="ticker-item">Zambia's copper production increases by 10% in Q2 2023</div>
                         <div class="ticker-item">New renewable energy project to boost rural electrification</div>
                         <div class="ticker-item">Government announces tax incentives for foreign investors</div>
+                        <div class="ticker-item">Zambia's copper production increases by 10% in Q2 2023</div> <!-- Duplicate for seamless scrolling -->
                     </div>
                 </div>               
                 
