--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li><a href="featured-sectors.html">Featured Sectors</a></li>
                     <li><a href="reports.html">Reports</a></li>
                     <li><a href="zambia-at-a-glance.html">Zambia at a Glance</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
         </div>
