--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="zambia-at-a-glance.html">Zambia at a Glance</a></li>
                     <li><a href="economic-indicators.html">Economic Indicators</a></li>
                     <li><a href="investment-guide.html">Investment Guide</a></li>
                     <li><a href="featured-sectors.html">Featured Sectors</a></li>
