--- a/featured-sectors.html
+++ b/featured-sectors.html
@@ -20,11 +20,12 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="zambia-at-a-glance.html">Zambia at a Glance</a></li>
                     <li><a href="economic-indicators.html">Economic Indicators</a></li>
                     <li><a href="investment-guide.html">Investment Guide</a></li>
                     <li><a href="featured-sectors.html">Featured Sectors</a></li>
                     <li><a href="reports.html">Reports</a></li>
-                    <li><a href="zambia-at-a-glance.html">Zambia at a Glance</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
         </div>
