--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <a href="featured-sectors.html" class="view-all">View All</a>
             </div>
             <div class="sector-container">
+                <!-- Existing Sectors -->
                 <div class="sector">
                     <img src="images/mining-icon.png" alt="Mining Icon" class="sector-icon" loading="lazy">
                     <h3>Mining</h3>
@@ -119,7 +120,27 @@
                     <p>Zambia's energy sector is ripe for investment, with a focus on renewable sources to meet growing demand.</p>
                     <a href="sector-energy.html" class="learn-more">Learn More</a>
                 </div>
-            </div>
+            
+                <!-- Updated Tourism Sector -->
+                <div class="sector">
+                    <img src="images/tourism-icon.png" alt="Tourism Icon" class="sector-icon" loading="lazy">
+                    <h3>Tourism and Hospitality</h3>
+                    <p>Explore Zambia's vibrant tourism industry, from Victoria Falls to rich wildlife and cultural heritage.</p>
+                    <a href="sector-tourism.html" class="learn-more">Learn More</a>
+                </div>
+                <div class="sector">
+                    <img src="images/technology-icon.png" alt="Technology Icon" class="sector-icon" loading="lazy">
+                    <h3>Technology</h3>
+                    <p>Advancing Zambia's tech ecosystem with AI, IT services, and innovation hubs driving economic transformation.</p>
+                    <a href="sector-technology.html" class="learn-more">Learn More</a>
+                </div>
+                <div class="sector">
+                    <img src="images/mining-icon.png" alt="Mining Icon" class="sector-icon" loading="lazy">
+                    <h3>Mining</h3>
+                    <p>Zambia continues to lead in mineral production, including copper and rare earth elements for global markets.</p>
+                    <a href="sector-mining.html" class="learn-more">Learn More</a>
+                </div>
+            </div>            
         </section>
     </main>
     <footer>
