--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
                     <h3>Energy</h3>
                     <p>Zambia's energy sector is ripe for investment, with a focus on renewable sources to meet growing demand.</p>
                     <a href="sector-energy.html" class="learn-more">Learn More</a>
-                </div>
-            
+                </div>            
                 <!-- Updated Tourism Sector -->
                 <div class="sector">
                     <img src="images/tourism-icon.png" alt="Tourism Icon" class="sector-icon" loading="lazy">
@@ -135,10 +134,10 @@
                     <a href="sector-technology.html" class="learn-more">Learn More</a>
                 </div>
                 <div class="sector">
-                    <img src="images/mining-icon.png" alt="Mining Icon" class="sector-icon" loading="lazy">
-                    <h3>Mining</h3>
-                    <p>Zambia continues to lead in mineral production, including copper and rare earth elements for global markets.</p>
-                    <a href="sector-mining.html" class="learn-more">Learn More</a>
+                    <img src="images/education-icon.png" alt="Education Icon" class="sector-icon" loading="lazy">
+                    <h3>Education</h3>
+                    <p>Unlocking Zambia's potential through investments in quality education and vocational training programs.</p>
+                    <a href="sector-education.html" class="learn-more">Learn More</a>
                 </div>
             </div>            
         </section>
