--- a/featured-sectors.html
+++ b/featured-sectors.html
@@ -35,6 +35,7 @@
             <h1>Featured Sectors</h1>
             <section id="featured-sectors">
                 <div class="sector-container">
+                    <!-- Existing Sectors -->
                     <div class="sector">
                         <img src="images/mining-icon.png" alt="Mining Icon" class="sector-icon">
                         <h2>Mining</h2>
@@ -68,14 +69,49 @@
                         </ul>
                         <a href="sector-energy.html" class="learn-more">Learn More</a>
                     </div>
+            
+                    <!-- New Sectors -->
+                    <div class="sector">
+                        <img src="images/tourism-icon.png" alt="Tourism Icon" class="sector-icon">
+                        <h2>Tourism and Hospitality</h2>
+                        <p>Explore Zambia's vibrant tourism industry, from Victoria Falls to rich wildlife and cultural heritage. The sector provides ample opportunities for eco-tourism and hospitality investments.</p>
+                        <ul>
+                            <li>Home to Victoria Falls, one of the Seven Natural Wonders</li>
+                            <li>Diverse wildlife and national parks</li>
+                            <li>Expanding eco-tourism market</li>
+                        </ul>
+                        <a href="sector-tourism.html" class="learn-more">Learn More</a>
+                    </div>
+                    <div class="sector">
+                        <img src="images/technology-icon.png" alt="Technology Icon" class="sector-icon">
+                        <h2>Technology</h2>
+                        <p>Advancing Zambia's tech ecosystem with AI, IT services, and innovation hubs driving economic transformation and creating job opportunities.</p>
+                        <ul>
+                            <li>Growing tech startups and innovation hubs</li>
+                            <li>Government support for digital transformation</li>
+                            <li>Investment opportunities in IT infrastructure</li>
+                        </ul>
+                        <a href="sector-technology.html" class="learn-more">Learn More</a>
+                    </div>
+                    <div class="sector">
+                        <img src="images/education-icon.png" alt="Education Icon" class="sector-icon">
+                        <h2>Education</h2>
+                        <p>Unlocking Zambia's potential through investments in quality education and vocational training programs, preparing the workforce for a knowledge-based economy.</p>
+                        <ul>
+                            <li>Focus on STEM education and digital skills</li>
+                            <li>Opportunities in vocational and higher education</li>
+                            <li>Growing demand for private and international schools</li>
+                        </ul>
+                        <a href="sector-education.html" class="learn-more">Learn More</a>
+                    </div>
                 </div>
             </section>
+            
             <section id="other-sectors">
                 <h2>Other Promising Sectors</h2>
                 <ul>
-                    <li>Tourism and Hospitality</li>
+                    <li>Healthcare and Public Health</li>
                     <li>Manufacturing</li>
-                    <li>Information and Communication Technology (ICT)</li>
                     <li>Infrastructure Development</li>
                 </ul>
                 <p>These sectors also present significant investment opportunities in Zambia. For more information on these and other sectors, please contact the Zambia Development Agency.</p>
