--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="sector">
                     <img src="images/technology-icon.png" alt="Technology Icon" class="sector-icon" loading="lazy">
-                    <h3>Technology</h3>
+                    <h3>Technology and Innovation</h3>
                     <p>Advancing Zambia's tech ecosystem with AI, IT services, and innovation hubs driving economic transformation.</p>
                     <a href="sector-technology.html" class="learn-more">Learn More</a>
                 </div>
